# llm-fmc

./: .gitignore  README.md  check_file.py  finetune-job.json  finetune-result.json  finetune_model.py  prepare_data.py  prepare_data.sh  pyproject.toml  res.txt  result.csv  test_model.py  tunes.json
input_data/prepared/: dev.jsonl  dev_prepared.jsonl  test.jsonl  test_prepared.jsonl  train.jsonl  train_prepared.jsonl
input_data/raw/: dev.txt  original_csv.csv  test.txt  train.txt
output/: evaluation_output-fine-tuned.txt  evaluation_output-gpt-3.5-turbo-constrained-labels - Copy.txt  evaluation_output-gpt-3.5-turbo-constrained-labels.txt  evaluation_output-gpt-3.5-turbo-few-shot.txt  evaluation_output-gpt-3.5-turbo-no-filter.txt  evaluation_output-gpt-3.5-turbo.txt  evaluation_output.txt  model_output-fine-tuned.txt  model_output-gpt-3.5-turbo-constrained-labels - Copy (2).txt  model_output-gpt-3.5-turbo-constrained-labels - Copy.txt  model_output-gpt-3.5-turbo-constrained-labels.txt  model_output-gpt-3.5-turbo-few-shot.txt  model_output-gpt-3.5-turbo-no-filter.txt  model_output-gpt-3.5-turbo.txt
