[tool.poetry]
name = "chatgpt-fmc"
version = "0.1.0"
description = ""
authors = ["Michael Stewart <michael.stewart.webdev@gmail.com>"]
readme = "README.md"
packages = [{include = "chatgpt_fmc"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.8"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
tiktoken = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
